--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 @font-face {
   font-family: "PP Agrandir Regular";
   src: url(./fonts/AgrandirPackage/PP-Agrandir-Regular.woff) format("woff"),
