--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,22 @@ body {
 .ork {
     font-family: "Orkney";
 }
+
+body::-webkit-scrollbar {
+    background-color: #F5F5F5;
+    width: 14px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: #babac0;
+    border-radius: 16px;
+    border: 4px solid #fff;
+}
+
+body::-webkit-scrollbar-button {
+    display:none;
+}
